--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,132 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  background-color: var(--bg-color);
+  width: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: "Poppins", sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.App {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.main-menu-container {
+
+  .main-menu {
+    width: 100%;
+    height: fit-content;
+    min-height: 100vh;
+    background: var(--white);
+
+    .logo {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 12px;
+
+      img {
+        width: 34px;
+        height: 34px;
+      }
+  
+      span {
+        font-size: 32px;
+        font-weight: 700;
+        color: var(--text-dark);
+      }
+    }
+
+    .menu-item-con-anchor {
+      width: 100%;
+      display: block;
+      height: fit-content;
+      /* padding: 8px; */
+      border-radius: 8px;
+
+      &.active {
+        color: var(--primary-color) !important;
+        /* background: var(--primary-bg) !important; */
+
+        .menu-item-con {
+          color: var(--primary-color) !important;
+          background: var(--primary-bg) !important;
+
+          .bi-chevron-right {
+            transform: rotate(90deg);
+          }
+        }
+
+        .dropdown-container {
+          display: block;
+        }
+      }
+
+      &:hover {
+        text-decoration: none;
+      }
+
+      .dropdown-container {
+        display: none;
+        width: 100%;
+        height: fit-content;
+        font-size: 16px;
+        transition: all 0.8s ease;
+
+        ul {
+          width: 100%;
+          height: fit-content;
+
+          li {
+            width: 100%;
+            height: fit-content;
+            padding: 10px;
+            color: var(--text-gray);
+          }
+
+          .sub-menu-anchor {
+            text-decoration: none;
+
+            &.active {
+
+              li {
+                color: var(--primary-color) !important;
+              }
+              
+            }
+
+            &:hover {
+              text-decoration: none;
+            }
+          }
+        }
+      }
+    }
+
+    .menu-item-con {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      height: fit-content;
+      padding: 14px;
+      text-decoration: none;
+      border-radius: 8px;
+      color: var(--black);
+
+      .bi-chevron-right {
+        transition: all 0.8s ease;
+        transform: rotate(0deg);
+      }
+
+      .item-text {
+        font-size: 18px;
+        display: flex;
+        column-gap: 10px;
+
+        i {
+          margin-top: -4px;
+          transition: all 0.8s ease;
+        }
+      }
+    }
   }
 }
