--- a/src/App.css
+++ b/src/App.css
@@ -130,3 +130,40 @@ body {
     }
   }
 }
+
+.main-search-container {
+  width: 100%;
+  height: 60px;
+  border-radius: 8px;
+  box-shadow: var(--box-shadow);
+  background: var(--white);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 24px;
+  margin-bottom: 24px;
+
+  i {
+    font-size: 22px;
+    color: var(--black);
+    margin-top: -4px;
+  }
+
+  input {
+    border: none;
+    background: none;
+    outline: none;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
+    width: 86%;
+  }
+
+  img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    position: relative;
+  }
+}
