--- a/src/Global.css
+++ b/src/Global.css
@@ -9,4 +9,7 @@
     --primary-color: #696cff;
     --primary-bg: rgba(105, 108, 255, .16);
     --text-gray: #566a7f;
+    --box-shadow: 0 0 .375rem .25rem rgba(161,172,184,.15);
+    --green: #71dd37;
+    --red: #c00;
 }
