--- a/src/Components/AddProducts/AddProducts.css
+++ b/src/Components/AddProducts/AddProducts.css
@@ -81,4 +81,18 @@
             }
         }
     }
+
+    .addproduct {
+        width: 150px;
+        height: 45px;
+        background: var(--primary-color);
+        color: var(--white);
+        outline: none;
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 24px 0;
+        border-radius: 8px;
+    }
 }
