--- a/src/Components/AddProducts/AddProducts.css
+++ b/src/Components/AddProducts/AddProducts.css
@@ -80,6 +80,10 @@
                 margin-top: -4px;
             }
         }
+
+        .uploadedimage {
+            margin: 24px 0;
+        }
     }
 
     .addproduct {
@@ -94,5 +98,29 @@
         align-items: center;
         margin: 24px 0;
         border-radius: 8px;
+    }
+
+    .error-message-container {
+        width: fit-content;
+        height: fit-content;
+        display: flex;
+        column-gap: 12px;
+        padding: 12px;
+        border-radius: 8px;
+        border: 1px solid var(--red);
+        font-size: 16px;
+        background: #cc000045;
+        position: fixed;
+        top: 12%;
+        left: 50%;
+        i {
+            margin-top: -4px;
+            color: var(--red);
+        }
+
+        p {
+            margin: 0;
+            color: var(--red);
+        }
     }
 }
