--- a/src/Global.css
+++ b/src/Global.css
@@ -12,4 +12,5 @@
     --box-shadow: 0 0 .375rem .25rem rgba(161,172,184,.15);
     --green: #71dd37;
     --red: #c00;
+    --box-shadow-blue: 0 .125rem .25rem 0 rgba(105,108,255,.4);
 }
